fix gallery overlap issue

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
 .stage-box {
     display: flex;
     background-color: black;
-    height: 760px;
+    height: 780px;
 }
 
 #stage {
@@ -35,7 +35,8 @@
 }
 
 #stage a img {
-    background: #fff;
+    background: black;
+    padding: 15px 0px;
     display: inline;
     width: 100%;
 }
